# docs/swagger.yaml
@@ -24,6 +24,18 @@ definitions:
         description: 网站名称
         type: string
     type: object
+  doc_api.DocCreateRequest:
+    properties:
+      content:
+        type: string
+      parentID:
+        type: integer
+      title:
+        type: string
+    required:
+    - content
+    - title
+    type: object
   models.RoleModel:
     properties:
       createdAt:
@@ -107,6 +119,15 @@ definitions:
           $ref: '#/definitions/models.UserModel'
         type: array
     type: object
+  res.ListResponse-role_api_RoleListResponse:
+    properties:
+      count:
+        type: integer
+      list:
+        items:
+          $ref: '#/definitions/role_api.RoleListResponse'
+        type: array
+    type: object
   res.Response:
     properties:
       code:
@@ -127,6 +148,33 @@ definitions:
         type: string
     required:
     - Title
+    type: object
+  role_api.RoleListResponse:
+    properties:
+      DocCount:
+        description: 角色拥有的文档数
+        type: integer
+      UserCount:
+        description: 角色下的用户数
+        type: integer
+      createdAt:
+        description: 添加时间
+        type: string
+      id:
+        description: 主键id
+        type: integer
+      isSystem:
+        description: 是否是系统角色
+        type: boolean
+      pwd:
+        description: 角色密码
+        type: string
+      title:
+        description: 角色的名称
+        type: string
+      updatedAt:
+        description: 更新时间
+        type: string
     type: object
   user_api.UserCreateRequest:
     properties:
@@ -238,6 +286,31 @@ info:
   title: 文档项目api文档
   version: "1.0"
 paths:
+  /api/docs:
+    post:
+      description: 创建文档，创建成功之后，data=文档id
+      parameters:
+      - description: 参数
+        in: body
+        name: data
+        required: true
+        schema:
+          $ref: '#/definitions/doc_api.DocCreateRequest'
+      - description: token
+        in: header
+        name: token
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/res.Response'
+      summary: 创建文档
+      tags:
+      - 文档管理
   /api/image:
     post:
       consumes:
@@ -323,6 +396,41 @@ paths:
       tags:
       - 用户管理
   /api/roles:
+    get:
+      description: 角色列表
+      parameters:
+      - in: query
+        name: key
+        type: string
+      - in: query
+        name: limit
+        type: integer
+      - in: query
+        name: page
+        type: integer
+      - in: query
+        name: sort
+        type: string
+      - description: token
+        in: header
+        name: token
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/res.Response'
+            - properties:
+                data:
+                  $ref: '#/definitions/res.ListResponse-role_api_RoleListResponse'
+              type: object
+      summary: 角色列表
+      tags:
+      - 角色管理
     post:
       description: 创建角色
       parameters:
@@ -345,6 +453,30 @@ paths:
           schema:
             $ref: '#/definitions/res.Response'
       summary: 创建角色
+      tags:
+      - 角色管理
+    put:
+      description: 更新角色
+      parameters:
+      - description: 参数
+        in: body
+        name: data
+        required: true
+        schema:
+          $ref: '#/definitions/role_api.RoleCreateRequest'
+      - description: token
+        in: header
+        name: token
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/res.Response'
+      summary: 更新角色
       tags:
       - 角色管理
   /api/site:
